@@ -1,5 +1,7 @@
 jlatexmath (1.0.5)
-	* Fix an issue with predefined string commands with a RowAtom (\qquad used two times) 
+	* Add \qquad as a Java macro rather than a String definition
+
+	* Fix an issue with predefined string commands with a RowAtom (\qquad used two times)
 
 	* Remove ligatures info for cyrillic
 
